fix: increase footer contact detail spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -655,6 +655,10 @@ footer h2{
     footer {
         flex-direction: row;
     }
+
+    #footer-contact p {
+        padding: 0.8rem 0;
+    }
 }
 
 /* Button Animations */
